<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"

    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="160dp"
            android:layout_height="130dp"
            android:contentDescription="@string/login"
            app:srcCompat="@drawable/imagen" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText6"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:background="#964431"
            android:drawableStart="@drawable/ic_action_usser"
            android:drawableLeft="@drawable/ic_action_usser"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText5"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:background="#964431"
            android:drawableStart="@drawable/ic_action_pass"
            android:drawableLeft="@drawable/ic_action_pass"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/white" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="#224C5F"
            app:cardCornerRadius="25dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="presionar">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/login"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="169dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="llamafrmBuscarUsuario"
            android:text="@string/olvidaste_contraseña"
            android:textColor="#5F892C"
            android:textSize="18sp"
            app:fontFamily="monospace" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="siguiente"
            android:text="@string/registra_aqui"
            android:textColor="#5F892C"
            android:textSize="18sp"
            app:fontFamily="monospace" />
    </LinearLayout>
</LinearLayout>